--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-md-8">
-                        <p>Olá! Sou [Seu Nome], o criador deste site. Tenho interesse em [Seus Interesses Relacionados à Qualidade ou ao Tema]. Criei este espaço para compartilhar informações sobre as normas de gestão da qualidade e seu impacto no desenvolvimento de produtos e serviços.</p>
+                        <p>Olá! Sou Charleu Dutra , o criador deste site. Tenho interesse em [Seus Interesses Relacionados à Qualidade ou ao Tema]. Criei este espaço para compartilhar informações sobre as normas de gestão da qualidade e seu impacto no desenvolvimento de produtos e serviços.</p>
                         <p>Minha jornada no mundo da qualidade começou em [Ano ou Evento]. Acredito que a qualidade é um pilar fundamental para o sucesso e a sustentabilidade em qualquer área.</p>
                         <p>Espero que as informações aqui apresentadas sejam úteis e contribuam para o seu entendimento sobre este tema tão importante.</p>
                         </div>
