--- a/index.html
+++ b/index.html
@@ -436,15 +436,15 @@
                 <h2 class="text-center mb-4">Sobre Mim</h2>
                 <div class="row justify-content-center">
                     <div class="col-md-4 text-center">
-                        <img src="placeholder-photo.jpg" alt="Sua Foto" class="img-fluid rounded-circle mb-3" style="width: 200px; height: 200px; object-fit: cover;">
+                        <img src="https://drive.google.com/file/d/15iyUmMVgAnCc_hWccz_q6THQWSWViYVs/view" alt="Sua Foto" class="img-fluid rounded-circle mb-3" style="width: 200px; height: 200px; object-fit: cover;">
                         <h3>Seu Nome</h3>
                         <p class="text-muted">Breve descrição ou título</p>
                     </div>
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-md-8">
-                        <p>Olá! Sou Charleu Dutra , o criador deste site. Tenho interesse em [Seus Interesses Relacionados à Qualidade ou ao Tema]. Criei este espaço para compartilhar informações sobre as normas de gestão da qualidade e seu impacto no desenvolvimento de produtos e serviços.</p>
-                        <p>Minha jornada no mundo da qualidade começou em [Ano ou Evento]. Acredito que a qualidade é um pilar fundamental para o sucesso e a sustentabilidade em qualquer área.</p>
+                        <p>Olá! Sou Charleu Dutra , o criador deste site. Tenho interesse em Seus Interessesno curso de sistema Relacionados à Qualidade ou ao Tema. Criei este espaço para compartilhar informações sobre as normas de gestão da qualidade e seu impacto no desenvolvimento de produtos e serviços.</p>
+                        <p>Minha jornada no mundo da qualidade começou  Ano de 2025 no curso de sistema para internet no 5° perildo . Acredito que a qualidade é um pilar fundamental para o sucesso e a sustentabilidade em qualquer área.</p>
                         <p>Espero que as informações aqui apresentadas sejam úteis e contribuam para o seu entendimento sobre este tema tão importante.</p>
                         </div>
                 </div>
