--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
                 <h2 class="text-center mb-4">Sobre Mim</h2>
                 <div class="row justify-content-center">
                     <div class="col-md-4 text-center">
-                        <img src="https://drive.google.com/file/d/15iyUmMVgAnCc_hWccz_q6THQWSWViYVs/view" alt="Sua Foto" class="img-fluid rounded-circle mb-3" style="width: 200px; height: 200px; object-fit: cover;">
+                        <img src="https://avatars.githubusercontent.com/u/164579915?s=400&u=f731ed8661e90b11e8e1d8e9939bf69049ee93eb&v=4" alt="Sua Foto" class="img-fluid rounded-circle mb-3" style="width: 200px; height: 200px; object-fit: cover;">
                         <h3>Seu Nome</h3>
                         <p class="text-muted">Breve descrição ou título</p>
                     </div>
